[gd_scene load_steps=9 format=3 uid="uid://dt4uh06cpm0yx"]

[ext_resource type="Script" uid="uid://dwxp1t1ktixp" path="res://scripts/ui/title/LoadMenu.gd" id="1_e7oux"]
[ext_resource type="Texture2D" uid="uid://cfhnm68xsojk6" path="res://assets/interface/ui/panel-gradient-1.png" id="2_vgpvv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vgpvv"]
content_margin_left = 25.0
content_margin_top = 25.0
content_margin_right = 25.0
content_margin_bottom = 25.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sl63s"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0vekb"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_88x8e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yxu6n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tctq1"]

[node name="LoadMenu" type="Control"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -350.0
offset_right = 400.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e7oux")

[node name="DialogOverlay" type="ColorRect" parent="."]
visible = false
z_index = 1
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.77254903)

[node name="Gradient" type="TextureRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("2_vgpvv")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 438.5
offset_top = 142.0
offset_right = 1477.0
offset_bottom = 945.0
color = Color(1, 1, 1, 0.3137255)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 75
text = "Saved Games"
horizontal_alignment = 1

[node name="SavesList" type="ItemList" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_styles/panel = SubResource("StyleBoxFlat_vgpvv")
theme_override_styles/selected = SubResource("StyleBoxFlat_sl63s")
theme_override_styles/selected_focus = SubResource("StyleBoxFlat_0vekb")
wraparound_items = false

[node name="Spacer" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_88x8e")

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 125
alignment = 1

[node name="LoadButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_styles/pressed = SubResource("StyleBoxFlat_yxu6n")
theme_override_styles/hover = SubResource("StyleBoxFlat_tctq1")
text = "Load"

[node name="DeleteButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_styles/pressed = SubResource("StyleBoxFlat_yxu6n")
theme_override_styles/hover = SubResource("StyleBoxFlat_tctq1")
text = "Delete
"

[node name="CloseButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_styles/pressed = SubResource("StyleBoxFlat_yxu6n")
theme_override_styles/hover = SubResource("StyleBoxFlat_tctq1")
text = "Close"
